--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,10 @@ dependencies {
 
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
 
+    compile group: 'org.apache.poi', name: 'poi', version: '4.1.0'
+    compile group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.0'
+
+
 }
 
 
