--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
 
     compile group:'com.fasterxml.jackson.dataformat', name:'jackson-dataformat-csv', version:'2.8.8'
-
+    compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.8.6"
 
     compile group: 'org.jsoup', name: 'jsoup', version: '1.11.2'
 
