--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,9 @@ dependencies {
 
     compile group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.11.335'
 
-    compile group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
+    annotationProcessor 'org.projectlombok:lombok:1.18.12'
+
     compile group: 'org.javers', name: 'javers-core', version: '5.6.3'
 
     compile group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.0'
@@ -50,6 +52,9 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
 
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.16.1'
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.12'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
 }
 
 
