--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,15 @@ dependencies {
     compile group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0'
     compile group: 'com.opencsv', name: 'opencsv', version: '5.2'
 
+
+    compile 'io.jsonwebtoken:jjwt-api:0.11.2'
+    runtime 'io.jsonwebtoken:jjwt-impl:0.11.2'
+    runtime 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+    // Uncomment the next line if you want to use RSASSA-PSS (PS256, PS384, PS512) algorithms:
+    //runtime 'org.bouncycastle:bcprov-jdk15on:1.60',
+    // Uncomment below line if you want to use gson
+    //runtime'io.jsonwebtoken:jjwt-gson:0.11.2'
+
     testImplementation 'org.junit.jupiter:junit-jupiter:5.5.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
@@ -59,8 +68,8 @@ dependencies {
 
 
 jar {
-    baseName = 'java-playground'
-    version =  '1.0.0'
+    archiveBaseName = 'java-playground'
+    archiveVersion =  '1.0.0'
 }
 
 test {
